--- a/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -1,12 +1,12 @@
-<form (ngSubmit)="onSubmit(titleInput.value, textInput.value)">
+<form (ngSubmit)="onSubmit(titleInput.value, textInput.value)" #form>
   <app-control label="Title">
-    <input name="title" id="title" #titleInput />
+    <input name="title" id="title" #titleInput #input />
   </app-control>
   <app-control label="Request">
-    <textarea name="request" id="request" rows="3" #textInput></textarea>
+    <textarea name="request" id="request" rows="3" #textInput #input></textarea>
   </app-control>
   <p>
-    <button appButton>
+    <button appButton #button>
       Submit
       <span ngProjectAs="icon">⌲</span>
     </button>
