--- a/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -1,9 +1,15 @@
-<form (ngSubmit)="onSubmit(titleInput.value, textInput.value)" #form>
+<form (ngSubmit)="onSubmit()" #form>
   <app-control label="Title">
-    <input name="title" id="title" #titleInput #input />
+    <input name="title" id="title" #input [(ngModel)]="enteredTitle" />
   </app-control>
   <app-control label="Request">
-    <textarea name="request" id="request" rows="3" #textInput #input></textarea>
+    <textarea
+      name="request"
+      id="request"
+      rows="3"
+      #input
+      [(ngModel)]="enteredText"
+    ></textarea>
   </app-control>
   <p>
     <button appButton #button>
